[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite/Airship/Player/ship_A.png" type="Texture" id=1]
[ext_resource path="res://Font/Kenney Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/UI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.427451, 0.427451, 0.427451, 1 )
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
margin_right = 600.0
margin_bottom = 860.0
script = ExtResource( 4 )

[node name="HP" type="HBoxContainer" parent="."]
margin_right = 95.0
margin_bottom = 64.0
alignment = 1

[node name="HP_Head" type="TextureRect" parent="HP"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="HP_Label" type="Label" parent="HP"]
margin_left = 68.0
margin_top = 14.0
margin_right = 95.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="Score" type="HBoxContainer" parent="."]
margin_left = 504.0
margin_top = 16.0
margin_right = 592.0
margin_bottom = 36.0
grow_horizontal = 0
alignment = 2

[node name="Score_Label" type="Label" parent="Score"]
margin_right = 96.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "1000"
valign = 1

[connection signal="score_change" from="." to="." method="_on_score_change"]
